assets/scss/layouts/_dark_mode.scss
[data-color-mode='dark'] body {
  color: $white;
  background-color: $dark-1;
}

.dark-mode {
  a {
    color: $yellow-1;

    &.text-red {
      color: $red-1;
    }

    &.text-green {
      color: $green-1;
    }
  }
  .swiper-slide {
    background: $dark-2 !important;
  }
  .map-sidebar {
    background: $dark-2 !important;
    nav {
      background: $dark-2;
    }
    .salon-card-list {
      background: $dark-2 !important;
      /* Track */
      &::-webkit-scrollbar-track {
        background: $dark-2 !important;
      }

      /* Handle */
      &::-webkit-scrollbar-thumb {
        background: $dark-5 !important;
      }
    }
  }
  .ymaps-2-1-79-balloon__content {
    background: $dark-2 !important;
  }
  .btn__asan-login {
    background: $dark-2;
    border: 1px solid #fff;
    &--image{
      svg{
        path{

          fill: #fff;
        }
      }
    }
    &--text {
      color: #fff;
    }
  }
}

.dark-mode {
  h2.title-with-line {
    span,
    i {
      background-color: $dark-2;
    }

    background: $dark-2;
  }
}

.dark-mode {
  .keep-colors {
    &,
    &:hover {
      color: inherit;
    }
  }
}

.dark-mode {
  a:not([class]) {
    color: $yellow-1;
  }

  hr {
    background-color: $dark-1;

    &.dashed {
      border-color: $dark-1;
    }
  }

  .card {
    background-color: $dark-2;

    &.underline {
      box-shadow: $shadow-dark-6;
    }
  }
}

.dark-mode {
  .text-dark-blue-2,
  .text-hover-red:hover {
    color: $yellow-1;
  }

  .text-dark-blue-3 {
    color: $grey-5;
  }

  .bg-greyish-blue-2 {
    background-color: $dark-1;
  }
}

.dark-mode {
  .page-header {
    .navbar-white {
      color: $dark-1;
      background: $white !important;

      li:hover > a,
      li a.active {
        color: $red-1 !important;
      }
    }

    .dropdown-content {
      background: $white !important;
      color: $dark-1;

      li:hover > a,
      li a.active {
        color: $red-1 !important;
      }
    }
  }
}

.dark-mode {
  .page-header {
    .topbar,
    .navbar,
    .navbar .dropdown-content {
      background-color: $dark-2;
      border-color: $dark-1;
    }

    .topbar {
      .menu > li a.active,
      .menu > li a:hover {
        color: $yellow-1;
      }

      .user-menu img {
        background-color: $dark-3;
      }

      .langs-menu,
      .user-menu {
        border-color: $white;

        &:hover {
          background-color: $white;
          color: $dark-2;
        }
      }

      .langs-menu_list-inner,
      .user-menu_list-inner {
        color: $white;
        background-color: $dark-2;
        box-shadow: $shadow-dark-2;

        a,
        span.cursor-pointer {
          color: $white;

          &:hover {
            color: $yellow-1;
          }
        }
      }
    }

    .navbar {
      .menu > li a.active,
      .menu > li a:hover,
      .menu > li:hover > a {
        color: $yellow-1;
      }

      .dropdown-content {
        box-shadow: $shadow-dark-3;
      }

      .dropdown-menu_categories {
        border-right-color: $dark-1;
      }
    }
  }

  .support-hotline {
    color: $yellow-1;
  }
}
.dark-mode {
  .page-footer {
    background-color: $dark-2;

    mark a {
      color: $white;
    }

    .socials a:hover {
      color: $dark-1;
    }

    .logo + p {
      color: $grey-4;
    }
  }

  .socials.btns a {
    color: $white;
    border-color: $grey-1;

    &:hover {
      background-color: $grey-1;
    }
  }
}

.dark-mode {
  .mobile-nav {
    background-color: $dark-2;
    border-top: 2px solid $dark-1;

    ul {
      a {
        color: $white;

        &.pseudo-active,
        &.exact-active {
          color: $yellow-1;
        }
      }

      li {
        .badge-counter {
          border-color: $dark-2;
        }

        &:nth-child(3) i {
          border: 6px solid $dark-1;
        }
      }
    }
  }

  .mobile-menu {
    .menu-header {
      background-color: $dark-2;

      span {
        &:first-of-type {
          color: $white;
        }
      }
    }

    .menu-backdrop {
      @include backdrop-filter($dark-1);
    }

    .menu-sidebar {
      background-color: rgba($dark-2, 0.9);

      .langs-menu {
        .btn {
          border-color: $grey-1;

          &:hover {
            border-color: $grey-1;
          }

          &.active {
            background-color: $grey-1;
          }
        }
      }
    }
  }
}

.dark-mode {
  .breadcrumbs {
    color: $grey-5;

    ul li {
      a {
        color: $grey-5;

        &:hover {
          color: $yellow-1;
        }
      }

      &.active {
        color: $white;
      }
    }

    .socials a {
      color: $white;

      &:hover {
        color: $yellow-1;
      }
    }
  }
}

.dark-mode {
  .pagination {
    li {
      button {
        color: $white;
        background-color: $dark-2;

        &:hover {
          color: $yellow-1;
        }
      }

      &.active button {
        color: $yellow-1;
      }

      &.disabled button {
        color: $grey-1;
      }
    }
  }
}

.dark-mode {
  .theme-switch.floating,
  .scroll-top,
  .map-switch {
    background-color: $dark-2;
    box-shadow: $shadow-dark-1;

    &:hover {
      color: $yellow-1;
    }
  }

  .action-bar {
    background-color: $dark-2;
    border-bottom-color: $dark-1;
  }
}

.dark-mode {
  .backdrop {
    @include backdrop-filter($dark-1);
  }
}

.dark-mode {
  .__rail-is-vertical {
    background: $dark-1 !important;

    .__bar-is-vertical {
      background: $grey-1 !important;
    }
  }
}

.dark-mode {
  .lds-spinner div:nth-child(1) {
    transform: rotate(0deg);
    animation-delay: -1.1s;

    &:after {
      background: $dark-background1;
    }
  }

  .lds-spinner div:nth-child(2) {
    transform: rotate(30deg);
    animation-delay: -1s;

    &:after {
      background: $dark-background2;
    }
  }

  .lds-spinner div:nth-child(3) {
    transform: rotate(60deg);
    animation-delay: -0.9s;

    &:after {
      background: $dark-background3;
    }
  }

  .lds-spinner div:nth-child(4) {
    transform: rotate(90deg);
    animation-delay: -0.8s;

    &:after {
      background: $dark-background4;
    }
  }

  .lds-spinner div:nth-child(5) {
    transform: rotate(120deg);
    animation-delay: -0.7s;

    &:after {
      background: $dark-background5;
    }
  }

  .lds-spinner div:nth-child(6) {
    transform: rotate(150deg);
    animation-delay: -0.6s;

    &:after {
      background: $dark-background6;
    }
  }

  .lds-spinner div:nth-child(7) {
    transform: rotate(180deg);
    animation-delay: -0.5s;

    &:after {
      background: $dark-background7;
    }
  }

  .lds-spinner div:nth-child(8) {
    transform: rotate(210deg);
    animation-delay: -0.4s;

    &:after {
      background: $dark-background8;
    }
  }

  .lds-spinner div:nth-child(9) {
    transform: rotate(240deg);
    animation-delay: -0.3s;

    &:after {
      background: $dark-background9;
    }
  }

  .lds-spinner div:nth-child(10) {
    transform: rotate(270deg);
    animation-delay: -0.2s;

    &:after {
      background: $dark-background10;
    }
  }

  .lds-spinner div:nth-child(11) {
    transform: rotate(300deg);
    animation-delay: -0.1s;

    &:after {
      background: $dark-background11;
    }
  }

  .lds-spinner div:nth-child(12) {
    transform: rotate(330deg);
    animation-delay: 0s;

    &:after {
      background: $dark-background12;
    }
  }
}

